Make sure resent events that don't match ids are not coalesced.

Resent events with different ids could get coalesced together causing
a larger magnitude than originally intended. Only coalesce events
that have the same id.

BUG=681353

Review-Url: https://codereview.chromium.org/2723023005
Cr-Commit-Position: refs/heads/master@{#454304}

Former-commit-id: b20bd7450c4a855003e366b6c3de9bf660092b54